modified to set the java.endorsed.dirs so that it runs on JRE 1.4.
JAXB RI relies on the JAXP RI 1.3, which uses JAXP API 1.3, which in turn collides with the version of JAXP in JRE 1.4.

svn path=/trunk/; revision=98